--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
             - .env
         ports:
             - "${API_PORT}:${API_PORT}"
+        volumes:
+            - ./creneaux.json:/app/creneaux.json
