--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "uuid": "^9.0.0",
     "zod": "^3.20.6"
   }
 }
